--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,32 @@
 
 html, body { height: 100%; }
 
+.webkit-box {
+  display: -webkit-box;
+}
+
+::-webkit-scrollbar {
+  height: 8px;
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #4d9f754d;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #000000cc;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #4d9f75b3;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: #4d9f75b3;
+}
+
 // flex center container
 .fcc {
   display: flex;
@@ -45,6 +71,12 @@ html, body { height: 100%; }
   &:not([disabled]):active {
     opacity: 1.0;
   }
+}
+
+.close_btn {
+  background-image: url("./assets/image/close.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .custom_basic_btn {
@@ -237,3 +269,20 @@ button.mat-menu-item {
     opacity: 0.3;
   }
 }
+
+.custom_checkbox {
+  background-color: #fff;
+  border: 1px solid #4d9f75;
+  border-radius: 4px;
+
+  &:not([disabled]):hover {
+    background-color: #d4e5dc;
+    border: 1px solid #4d9f75;
+  }
+
+  &:disabled {
+    opacity: 0.3;
+  }
+}
+
+
